fix: added api/v1 prefix
