# app/gateway/api/api.go
@@ -2,7 +2,7 @@ package api
 
 import (
 	"github.com/go-chi/chi/v5"
-	"github.com/swaggo/http-swagger"
+	httpSwagger "github.com/swaggo/http-swagger"
 
 	"io/ioutil"
 	"net/http"
@@ -32,34 +32,37 @@ func (s *Server) AssignRoutes() {
 
 	s.Router.Use(s.middlewares.CORS, s.middlewares.RequestTracer)
 
-	s.Router.Route("/accounts", func(r chi.Router) {
-		r.Group(func(r chi.Router) {
-			r.Use(s.middlewares.Authorization)
-			r.Method("GET", "/", rest.Handler(s.accounts.List))
-			r.Method("GET", "/{accountID}/balance", rest.Handler(s.accounts.GetBalance))
+	s.Router.Route("/api/v1", func(r chi.Router) {
+		s.Router.Route("/accounts", func(r chi.Router) {
+			r.Group(func(r chi.Router) {
+				r.Use(s.middlewares.Authorization)
+				r.Method("GET", "/", rest.Handler(s.accounts.List))
+				r.Method("GET", "/{accountID}/balance", rest.Handler(s.accounts.GetBalance))
+			})
+			r.Method("POST", "/", rest.Handler(s.accounts.Create))
 		})
-		r.Method("POST", "/", rest.Handler(s.accounts.Create))
+
+		s.Router.Route("/transfers", func(r chi.Router) {
+			r.Use(s.middlewares.Authorization)
+			r.Method("POST", "/", rest.Handler(s.transfers.Create))
+			r.Method("GET", "/", rest.Handler(s.transfers.List))
+		})
+
+		s.Router.Method("POST", "/login", rest.Handler(s.authentication.Authenticate))
+
+		s.Router.Method("GET", "/swagger/{*}", httpSwagger.WrapHandler)
+
+		s.Router.Get("/swagger/swagger.json", func(rw http.ResponseWriter, _ *http.Request) {
+			rw.Header().Set("Content-Type", "application/json")
+			doc, _ := ioutil.ReadFile("docs/swagger.json")
+			rw.Write(doc)
+		})
+
+		s.Router.Get("/", func(writer http.ResponseWriter, request *http.Request) {
+			http.Redirect(writer, request, "/swagger/index.html", http.StatusSeeOther)
+		})
 	})
 
-	s.Router.Route("/transfers", func(r chi.Router) {
-		r.Use(s.middlewares.Authorization)
-		r.Method("POST", "/", rest.Handler(s.transfers.Create))
-		r.Method("GET", "/", rest.Handler(s.transfers.List))
-	})
-
-	s.Router.Method("POST", "/login", rest.Handler(s.authentication.Authenticate))
-
-	s.Router.Method("GET", "/swagger/{*}", httpSwagger.WrapHandler)
-
-	s.Router.Get("/swagger/swagger.json", func(rw http.ResponseWriter, _ *http.Request) {
-		rw.Header().Set("Content-Type", "application/json")
-		doc, _ := ioutil.ReadFile("docs/swagger.json")
-		rw.Write(doc)
-	})
-
-	s.Router.Get("/", func(writer http.ResponseWriter, request *http.Request) {
-		http.Redirect(writer, request, "/swagger", http.StatusSeeOther)
-	})
 }
 
 func NewServer(application *app.Application) *Server {
